# tesseract-template

./: .dockerignore  .env  .gcloudignore  .gitignore  Dockerfile  README.md  app.py  cloudbuild.yml  docker-entrypoint.sh  example.env  logging.ini  pyproject.toml  requirements.txt  schema.tgz  schema.xml  shell.nix
.github/scripts/: prune-old-images.sh
.github/workflows/: gcp-artifact-registry-cloudrun.yml  gcp-deploy-build-dev.yml  gcp-deploy-prod.yml  gcp-deploy-tesseract-ui.yml  gcp-olap-build-deploy-dev.yml  gcp-olap-build-deploy-pr.yml  gcp-olap-deploy-prod.yml  gcp-registry-cloudrun-develop.yml  gcp-registry-cloudrun.yml  gcp-registry-gke-develop.yml  gcp-registry-gke.yml  gcp-ui-deploy.yml  google-gke-prod.yaml  google-registry-cloudrun-develop.yml  google-registry-cloudrun.yml  google-registry-gke-dev.yaml  google-registry-gke-develop.yml  google-registry-gke-playground.yaml  google-registry-gke-prod.yml  google-registry-gke.yml  google-registry-prod.yaml
app/: __init__.py
build-explorer/: index.html  index.tsx  package-lock.json  package.json  vite.config.js  vizbuilder.js
dataexplorer/: index-36e837f3.js  index-legacy-868d3f93.js  index.html  polyfills-legacy-a0645b3b.js
dataexplorer/assets/: bp3-legacy.6745aea2.js  bp3.ce55ab8b.js  icons-legacy.228c76db.js  icons.17a843a8.js  index-legacy.95857aac.js  index.06948043.css  index.f915ca68.js  polyfills-legacy.a83bab57.js
documentation/: SETUP_GCR.md  gcp-setup.md  github-branch-setup.md  github-environment-setup.md
etc/: logging.ini
etc/schema/: dim_shared_trade_flow.xml  (+5 more)
helm/: Chart.yaml  development.yaml  playground.yaml  production.yaml  values.yaml
kubernetes/: README.md  ingress.yaml  managed_cert.yaml  python-tesseract.yaml
schema/: acs_ygl_language_spoken_at_home_by_english_ability_2016_1.xml  dim_shared_geography.xml  dim_shared_hs6.xml  dim_shared_subnat_time.xml  dim_shared_subnational_hs6.xml  example.xml  gini.xml  national_exports.xml
server/: debug.py
tesseract-ui/: Dockerfile  README.md  create-cloud-build.sh  create-nginx-config.sh
(+11 files in other folders)
