[project]
name = "tesseract-app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
  "Francisco Abarzua <francisco@datawheel.us>",
  "Samuel Osorio <samuel@datawheel.us>",
]
license = "MIT"
packages = [{include = "app"}]

[project.dependencies]
granian = "^1.4.0"
logiclayer = "^0.4.0"
logiclayer-complexity = "^0.5.4"
tesseract-olap = {extras = ["clickhouse", "redis"], version = "^0.9.9"}

[tool.poetry.group.dev.dependencies]
granian = {extras = ["reload"], version = "^1.4.0"}
python-dotenv = {extras = ["cli"], version = "^1.0.1"}
ruff = "^0.4.8"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
