[project]
name = "tesseract-app"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
  "granian>=1.6.0",
  "logiclayer-complexity>=0.5.5",
  "logiclayer>=0.4.0",
  "tesseract-olap[clickhouse,redis]>=0.10.3",
]
authors = [
  {name = "Francisco Abarzua", email = "francisco@datawheel.us"},
  {name = "Samuel Osorio", email = "samuel@datawheel.us"},
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"

[tool.uv]
dev-dependencies = [
  "granian[reload]>=1.6.0",
  "python-dotenv[cli]>=1.0.1",
  "pytest>=8.3.3",
]