[tool.poetry]
name = "tesseract-olap-demo"
version = "0.4.0"
description = ""
authors = [
  "Francisco Abarzua <francisco@datawheel.us>",
  "Samuel Osorio <samuel@datawheel.us>",
]
license = "MIT"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
granian = "^1.4.0"
logiclayer = "^0.4.0"
logiclayer-complexity = "^0.5.4"
tesseract-olap = {extras = ["clickhouse", "redis"], version = "^0.9.9"}
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
granian = {extras = ["reload"], version = "^1.4.0"}
python-dotenv = {extras = ["cli"], version = "^1.0.1"}
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
